force-app/main/default/objects/Account/fields/Most_Recent_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Shipping_Date__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1307</description>
    <inlineHelpText>When did the last shipment to this Customer go out?</inlineHelpText>
    <label>Most Recent Shipping Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>