force-app/main/default/objects/Account/fields/myOrderbirdEmail__c.field-meta.xml
<CustomField>
    <fullName>myOrderbirdEmail__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>By which email address is this account officially registered on my.orderbird? Filled in as soon as known. Must be updated if changes occur!</inlineHelpText>
    <label>my.orderbird Email</label>
    <type>Email</type>
</CustomField>