force-app/main/default/objects/Account/fields/Name_of_official_authorized_signatory__c.field-meta.xml
<CustomField>
    <fullName>Name_of_official_authorized_signatory__c</fullName>
    <label>Name of official authorized signatory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>