force-app/main/default/objects/Account/fields/Net_Billing_Amount_SUM__c.field-meta.xml
<CustomField>
    <fullName>Net_Billing_Amount_SUM__c</fullName>
    <description>Sum of &quot;Amount Without Tax&quot; of all related invoices with Status=posted</description>
    <inlineHelpText>Sum of total net amount of all related invoices</inlineHelpText>
    <label>Net Billing Amount (SUM)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>