force-app/main/default/objects/Account/fields/Netsuite_Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Open_Balance__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1230</description>
    <inlineHelpText>Open Balance migrated from Netsuite. Updated on regular basis by NEST.</inlineHelpText>
    <label>Netsuite Open Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>