force-app/main/default/objects/Account/fields/NetsuiteAddr1__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteAddr1__c</fullName>
    <label>Netsuite Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>