force-app/main/default/objects/Account/fields/NetsuiteAddr2__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteAddr2__c</fullName>
    <label>Netsuite Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>