force-app/main/default/objects/Account/fields/Not_Cleared_Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Not_Cleared_Invoice_Count__c</fullName>
    <label>Not Cleared Invoice Count</label>
    <summaryFilterItems>
        <field>Invoice__c.Cleared__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>