force-app/main/default/objects/Account/fields/Noteworthy_about_Partners__c.field-meta.xml
<CustomField>
    <fullName>Noteworthy_about_Partners__c</fullName>
    <description>The field is pre-filled with the content in the &quot;Comments&quot; field in the Lead object. For Partners this field is defined directly in the form that users filled in orderbird webpage.</description>
    <inlineHelpText>Specific information about this partner that came from the partner lead form.</inlineHelpText>
    <label>Noteworthy about Partners</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>