force-app/main/default/objects/Account/fields/NoteworthyAboutCustomer__c.field-meta.xml
<CustomField>
    <fullName>NoteworthyAboutCustomer__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>What do we need to know about this customer?
Enter important personal information about the customer:Is he friendly or grumpy? Is he not the one who will be working in the branch but only a networking specialist?</inlineHelpText>
    <label>Noteworthy about Customer</label>
    <length>301</length>
    <type>LongTextArea</type>
</CustomField>