force-app/main/default/objects/Account/fields/NS_Customer_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Customer_Internal_ID__c</fullName>
    <description>Stakeholder: NEST</description>
    <externalId>true</externalId>
    <inlineHelpText>What is the internal ID of this customer account in Netsuite? Updated manually regularly</inlineHelpText>
    <label>NS Customer Internal ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>