force-app/main/default/objects/Account/fields/Number_of_active_subscriptions_2__c.field-meta.xml
<CustomField>
    <fullName>Number_of_active_subscriptions_2__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-511</description>
    <inlineHelpText>How many active subscriptions does this account have?</inlineHelpText>
    <label>Number of active subscriptions</label>
    <summaryFilterItems>
        <field>Subscription__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Subscription__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>