force-app/main/default/objects/Account/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-509</description>
    <inlineHelpText>How many locations does this venue have?</inlineHelpText>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>