force-app/main/default/objects/Account/fields/OldBatch__c.field-meta.xml
<CustomField>
    <fullName>OldBatch__c</fullName>
    <label>OldBatch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>