force-app/main/default/objects/Account/fields/Onboard_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboard_Status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Onboarding</fullName>
                <default>true</default>
                <label>No Onboarding</label>
            </value>
            <value>
                <fullName>Awaiting Case</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer Reply</fullName>
            </value>
            <value>
                <fullName>Re-Open</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed/Uncompleted</fullName>
            </value>
            <value>
                <fullName>Awaiting Subscription (New)</fullName>
            </value>
            <value>
                <fullName>Awaiting Subscription (Open)</fullName>
            </value>
            <value>
                <fullName>Awaiting Subscription (On Hold)</fullName>
            </value>
            <value>
                <fullName>Awaiting Subscription (Waiting for Customer Reply)</fullName>
            </value>
            <value>
                <fullName>Awaiting Subscription (Re-Open)</fullName>
            </value>
            <value>
                <fullName>Awaiting Subscription (Escalated)</fullName>
            </value>
            <value>
                <fullName>Awaiting Subscription (Postponed)</fullName>
            </value>
            <value>
                <fullName>Awaiting Subscription (Completed)</fullName>
            </value>
            <value>
                <fullName>Awaiting Subscription (Closed/Uncompleted)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>