force-app/main/default/objects/Account/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <formula>TEXT(Onboard_Status__c) + IF(ISBLANK(OnboardingClosedDate__c),&quot;&quot;,&quot; (&quot;+TEXT(OnboardingClosedDate__c)+&quot;)&quot;)</formula>
    <label>Onboarding</label>
    <type>Text</type>
</CustomField>