force-app/main/default/objects/Account/fields/OnboardingClosedDate__c.field-meta.xml
<CustomField>
    <fullName>OnboardingClosedDate__c</fullName>
    <label>Onboarding Closed Date</label>
    <type>Date</type>
</CustomField>