force-app/main/default/objects/Account/fields/OpeningHours__c.field-meta.xml
<CustomField>
    <fullName>OpeningHours__c</fullName>
    <description>Stakeholder: Sales &amp; PaM (METRO)</description>
    <inlineHelpText>What are the venue&apos;s business hours? To be filled in by Sales. 
e.g. Tuesday till Sunday from 10:00 AM - 11:00 PM</inlineHelpText>
    <label>Opening Hours (free text)</label>
    <type>TextArea</type>
</CustomField>