force-app/main/default/objects/Account/fields/Origin_check__c.field-meta.xml
<CustomField>
    <fullName>Origin_check__c</fullName>
    <description>temporary field - can be deleted again soon</description>
    <formula>Id =  Origin_Opportunity__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin check</label>
    <type>Checkbox</type>
</CustomField>