force-app/main/default/objects/Account/fields/Origin_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Origin_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stakeholder: CDS &amp; Sales
https://jira.orderbird.com/browse/CDS-2404</description>
    <inlineHelpText>Has this Account been the result of an Opportunity?</inlineHelpText>
    <label>Origin Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related MINI Registrations</relationshipLabel>
    <relationshipName>InitiatedAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>