force-app/main/default/objects/Account/fields/OtherPartnerPrograms__c.field-meta.xml
<CustomField>
    <fullName>OtherPartnerPrograms__c</fullName>
    <description>Stakeholder: PaM</description>
    <inlineHelpText>Does the partner want to cooperate in other partner programs? Filled in by Partner Management</inlineHelpText>
    <label>Other Partner Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Network Partner</fullName>
            </value>
            <value>
                <fullName>Support Partner</fullName>
            </value>
            <value>
                <fullName>Product Partner</fullName>
            </value>
            <value>
                <fullName>Affiliate Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>