force-app/main/default/objects/Account/fields/Outstanding_Amount_since__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount_since__c</fullName>
    <label>Outstanding Amount since</label>
    <type>Date</type>
</CustomField>