force-app/main/default/objects/Account/fields/Outstanding_Invoice_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Invoice_Amount_2__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-509</description>
    <inlineHelpText>How high is the combined open balance of all related invoices?</inlineHelpText>
    <label>Outstanding Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>