force-app/main/default/objects/Account/fields/PartnerStatus__c.field-meta.xml
<CustomField>
    <fullName>PartnerStatus__c</fullName>
    <description>Stakeholder: PaM</description>
    <inlineHelpText>What is this company&apos;s status as an orderbird partner? Managed by PaM</inlineHelpText>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lostnotregionalfieldagent</fullName>
                <label>Lost - not regional field agent</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Lost - lost confidence in product</fullName>
            </value>
            <value>
                <fullName>Lost - No relevant Contact</fullName>
            </value>
            <value>
                <fullName>Lost - out of business</fullName>
            </value>
            <value>
                <fullName>Lost - teamed up with other POS system</fullName>
            </value>
            <value>
                <fullName>Lost - unattractive commission model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>