force-app/main/default/objects/Account/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <description>Stakeholder: PaM</description>
    <inlineHelpText>How is our relationship with this partner defined? Referral, Distribution or one of the big strategic partners? Filled in by PaM</inlineHelpText>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>n/a</fullName>
            </value>
            <value>
                <fullName>ConCardis</fullName>
            </value>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>METRO</fullName>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Joint Sales</fullName>
            </value>
            <value>
                <fullName>Product Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>