force-app/main/default/objects/Account/fields/Pay_Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Pay_Acquirer__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <inlineHelpText>Which Acquirer is the customer at?</inlineHelpText>
    <label>Pay Acquirer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bambora</fullName>
            </value>
            <value>
                <fullName>Concardis</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>