force-app/main/default/objects/Account/fields/Pay_Onboarding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Onboarding_Start_Date__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <inlineHelpText>When has the pay onboarding been started?</inlineHelpText>
    <label>Pay Onboarding Start Date</label>
    <type>DateTime</type>
</CustomField>