force-app/main/default/objects/Account/fields/Pay_Price_Model__c.field-meta.xml
<CustomField>
    <fullName>Pay_Price_Model__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <label>Pay Price Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>MINI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>