force-app/main/default/objects/Account/fields/Pay_Status__c.field-meta.xml
<CustomField>
    <fullName>Pay_Status__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <inlineHelpText>What is the customers orderbird-pay status? Managed by Team pay</inlineHelpText>
    <label>Pay Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding Completed</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lost/Inactive</fullName>
            </value>
            <value>
                <fullName>Onboarding not Completed</fullName>
            </value>
            <value>
                <fullName>Onboarding in Progress</fullName>
            </value>
            <value>
                <fullName>Waiting for missing documents</fullName>
            </value>
            <value>
                <fullName>Not interested in Pay</fullName>
            </value>
            <value>
                <fullName>No Reaction to Reminders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>