force-app/main/default/objects/Account/fields/Pay_Terminal_ID__c.field-meta.xml
<CustomField>
    <fullName>Pay_Terminal_ID__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <label>Pay Terminal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>