force-app/main/default/objects/Account/fields/Payment_Method_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Status__c</fullName>
    <formula>DefaultPaymentMethod__r.PaymentMethodStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method Status</label>
    <type>Text</type>
</CustomField>