force-app/main/default/objects/Account/fields/Payment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payment_Provider__c</fullName>
    <label>Payment Solution Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect desires Concardis solution</fullName>
            </value>
            <value>
                <fullName>Prospect specifically asked for an alternative payment solution other than Concardis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>