force-app/main/default/objects/Account/fields/PaymentGateway__c.field-meta.xml
<CustomField>
    <fullName>PaymentGateway__c</fullName>
    <label>Payment Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>