force-app/main/default/objects/Account/fields/PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm__c</fullName>
    <label>Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>