force-app/main/default/objects/Account/fields/Payworks_auto_Link__c.field-meta.xml
<CustomField>
    <fullName>Payworks_auto_Link__c</fullName>
    <formula>IF( NOT(ISBLANK(Payworks_Merchant_ID__c)) ,

HYPERLINK(&quot;https://api.payworks.io/uis/mngr/#/applications/pw.orderbird.mpos/merchants/&quot; &amp; Payworks_Merchant_ID__c &amp; &quot;/information&quot;, &quot;Click Me&quot;)

, &quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payworks Link</label>
    <type>Text</type>
</CustomField>