force-app/main/default/objects/Account/fields/Payworks_Link__c.field-meta.xml
<CustomField>
    <fullName>Payworks_Link__c</fullName>
    <description>Stakeholder: Pay https://jira.orderbird.com/browse/CDS-53</description>
    <label>Payworks Link (old)</label>
    <type>Url</type>
</CustomField>