force-app/main/default/objects/Account/fields/Payworks_Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Payworks_Merchant_ID__c</fullName>
    <description>Used in Payworks Link formula https://jira.orderbird.com/browse/CDS-2808
Stakeholder: Pay</description>
    <inlineHelpText>What is the Customer&apos;s Merchant ID with Payworks? (Needed to create the Payworks Link)</inlineHelpText>
    <label>Payworks Merchant ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>