force-app/main/default/objects/Account/fields/Phone_of_official_authorized_signatory__c.field-meta.xml
<CustomField>
    <fullName>Phone_of_official_authorized_signatory__c</fullName>
    <label>Phone of official authorized signatory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>