force-app/main/default/objects/Account/fields/Primary_contact_email__c.field-meta.xml
<CustomField>
    <fullName>Primary_contact_email__c</fullName>
    <formula>Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary contact email</label>
    <type>Text</type>
</CustomField>