force-app/main/default/objects/Account/fields/PrimaryLanguage__c.field-meta.xml
<CustomField>
    <fullName>PrimaryLanguage__c</fullName>
    <defaultValue>&quot;German&quot;</defaultValue>
    <description>Stakeholder: Sales &amp; CS with MKT</description>
    <inlineHelpText>What language do we use to communicate with this venue? Filled in as soon as known. Updated if necessary!</inlineHelpText>
    <label>Primary Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>