force-app/main/default/objects/Account/fields/Privacy_Contact__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Privacy Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Privacy Contact)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>