force-app/main/default/objects/Account/fields/Product_Test_Participation__c.field-meta.xml
<CustomField>
    <fullName>Product_Test_Participation__c</fullName>
    <label>Product Test Participation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>orderbird Mini</fullName>
            </value>
            <value>
                <fullName>PRO Field Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>