force-app/main/default/objects/Account/fields/ProductPartnerCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductPartnerCategory__c</fullName>
    <description>Stakeholder: PaM</description>
    <inlineHelpText>What is the specific segment of a Product Partner (e.g. table reservation). Only relevant for Partner Management and Product Partnerships. Filled in by PaM</inlineHelpText>
    <label>Product Partner Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics &amp; Controlling</fullName>
            </value>
            <value>
                <fullName>Ordering (pre or waiters loose order)</fullName>
            </value>
            <value>
                <fullName>Reward Management</fullName>
            </value>
            <value>
                <fullName>Hotel Managment Software</fullName>
            </value>
            <value>
                <fullName>Cashbook</fullName>
            </value>
            <value>
                <fullName>Customer Management</fullName>
            </value>
            <value>
                <fullName>Supplier Management</fullName>
            </value>
            <value>
                <fullName>Delivery Service</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Loyalty Management</fullName>
            </value>
            <value>
                <fullName>Mobile Payment</fullName>
            </value>
            <value>
                <fullName>Workforce Management, time clock, etc.</fullName>
            </value>
            <value>
                <fullName>Menus Management</fullName>
            </value>
            <value>
                <fullName>Payment Provider</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>Table Reservation</fullName>
            </value>
            <value>
                <fullName>Retailing</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Voucher Management</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>