force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>SAL-1107</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DE Ost</fullName>
            </value>
            <value>
                <fullName>DE Nord</fullName>
            </value>
            <value>
                <fullName>DE West</fullName>
            </value>
            <value>
                <fullName>DE Süd</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>