force-app/main/default/objects/Account/fields/RegionalManager__c.field-meta.xml
<CustomField>
    <fullName>RegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsRegionalManager</relationshipName>
    <type>Lookup</type>
</CustomField>