force-app/main/default/objects/Account/fields/Registration_certificate__c.field-meta.xml
<CustomField>
    <fullName>Registration_certificate__c</fullName>
    <label>Registration certificate</label>
    <type>Url</type>
</CustomField>