force-app/main/default/objects/Account/fields/Registration_certificate_chk__c.field-meta.xml
<CustomField>
    <fullName>Registration_certificate_chk__c</fullName>
    <label>Registration Certificate check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>