force-app/main/default/objects/Account/fields/Registration_number__c.field-meta.xml
<CustomField>
    <fullName>Registration_number__c</fullName>
    <inlineHelpText>Also known as &quot;Handelsregisternummer&quot; in Germany</inlineHelpText>
    <label>Registration number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>